CMAKE_MINIMUM_REQUIRED(VERSION 2.4)

PROJECT(CPPr)

SET(CMAKE_MODULE_PATH
  ${CMAKE_MODULE_PATH}
  ${CPPr_SOURCE_DIR}/cmake
)

#Find Wt
FIND_PACKAGE(Wt REQUIRED)
INCLUDE_DIRECTORIES(${Wt_INCLUDE_DIR})

#Include Boost
INCLUDE(cmake/WtFindBoost-cmake.txt)
INCLUDE_DIRECTORIES(${BOOST_INCLUDE_DIRS})
LINK_DIRECTORIES(${BOOST_LIB_DIRS})

#Suppressing some boost related warnings
IF(WIN32)
	ADD_DEFINITIONS(
	  -D_CRT_SECURE_NO_WARNINGS
	  -D_SCL_SECURE_NO_WARNINGS
	)
ENDIF(WIN32)

SUBDIRS(src)